build: bump jdk to 21 and spring-boot to 3.2.0